Remove missing adaptive icon reference

--- a/app.json
+++ b/app.json
@@ -9,11 +9,7 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "android": {
-      "package": "com.habitcontrol.app",
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+      "package": "com.habitcontrol.app"
     },
     "ios": {
       "supportsTablet": true,
