--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/uuid": "^9.0.8",
+    "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "~5.8.3"
   }
 }
