--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@supabase/supabase-js": "^2.49.8",
     "date-fns": "^3.3.1",
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
